# BlackSheild

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
blacksheild.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
blacksheild/core/: config.py  exception.py  state.py
blacksheild/graph/: builder.py  edges.py
blacksheild/nodes/: correlate.py  embed.py  fetch_github.py  fetch_nvd.py  fetch_osv.py  intake.py  normalize.py  report.py  score.py
scripts/: run.py
